fix spacing on main and aside for responsiveness

--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,8 @@ button:active {
 aside {
     background-color: #fed9bc;
     padding: 2%;
+    width: 95%;
+    margin: auto;
 }
 
 aside img {
